fix: team members overflow fix

--- a/src/auth/modules/css/team.module.css
+++ b/src/auth/modules/css/team.module.css
@@ -2,8 +2,7 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	grid-area: 4 / 1 / span 1 / span 1;
-	height: 450px;
+	grid-area: 4 / 1 / span 5 / span 1;
 	width: 100%;
 	min-width: 200px;
 	background-color: rgb(20, 26, 36);
@@ -12,7 +11,7 @@
 	border-style: solid;
 	border-width: 2px;
 	color: white;
-	padding: 12px;
+	padding: 12px 12px 0 12px;
 }
 
 .title {
@@ -43,7 +42,7 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	width: 100%;
-	max-height: 85%;
+	max-height: 87%;
 	overflow-y: auto;
 }
 
@@ -70,7 +69,7 @@
 
 @media only screen and (min-width: 1000px) {
 	.card {
-		grid-area: 2 / 1 / span 1 / span 1;
+		grid-area: 2 / 1 / span 5 / span 1;
 	}
 }
 
@@ -360,4 +359,7 @@
 		right: 14px;
 	}
 
+	.holder {
+		max-height: 78%;	
+	}
 }
